@@ -7,6 +7,13 @@ repositories {
 }
 
 dependencies {
+    testImplementation(libs.kotest.runner.junit5)
+    testImplementation(libs.kotest.assertions.core)
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("--add-modules=jdk.incubator.vector", "-Xmx16g")
 }
 
 java {
